# semantictest

./: .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: publish.yml  tests.yml
semantic_unit/cli/: main.py
semantic_unit/core/: engine.py  models.py
tests/: test_engine.py  test_models.py
